[package]
name = "monocle"
version = "0.0.1"
edition = "2018"
readme = "README.md"
description = "A terminal-based system-monitoring tool written in rust."
repository = "https://github.com/Decave/monocle"
license = "GPL-3.0-or-later"
keywords = [ "linux", "monitoring", "system", "terminal", "tui" ]
categories = [ "command-line-utilities" ]

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
crossterm = "0.25"
env_logger = "0.9.0"
log = "0.4"
tui = "0.19"
